--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.username=sarfaraz
 spring.datasource.password=sarfaraz@321
-spring.datasource.url=jdbc:mysql://192.168.100.125:3306/projectdb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/projectdb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 #spring.security.user.name=admin
 #spring.security.user.password=admin
 #######
@@ -23,6 +23,7 @@ spring.servlet.multipart.max-request-size=215MB
 #file.upload-dir=uploads
 
 # logging.level.org.hibernate.type=trace
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS: false
 
 
 # Server Sttings
