--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-
+#####
 spring.datasource.username=sarfaraz
 spring.datasource.password=sarfaraz@321
 spring.datasource.url=jdbc:mysql://localhost:3306/projectdb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-#spring.security.user.name=admin
+######
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://projectmanagementwebapp.co.in/
 #spring.security.user.password=admin
 #######
 spring.jpa.hibernate.ddl-auto=update
@@ -21,6 +22,8 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
 #file.upload-dir=uploads
+
+#####
 
 # logging.level.org.hibernate.type=trace
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS: false
